...
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:id="@+id/mainContentCard"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_layout"
        android:elevation="4dp"
        android:orientation="vertical"
...
